--- a/index.html
+++ b/index.html
@@ -8,28 +8,53 @@
 *{margin:0;padding:0;box-sizing:border-box}
 body{background:#0a0c10;display:flex;align-items:center;justify-content:center;min-height:100vh;font-family:'Sora',sans-serif}
 .splash{text-align:center}
-.logo{width:60px;height:60px;border-radius:16px;background:linear-gradient(135deg,#00e5ff,#7c3aed);display:grid;place-items:center;font-size:28px;margin:0 auto 16px;animation:pulse 1.5s ease-in-out infinite}
+
+.logo{
+  width:70px; /* Kích thước khung chứa logo */
+  height:70px;
+  border-radius:18px;
+  background:linear-gradient(135deg,#00e5ff,#7c3aed);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  margin:0 auto 16px;
+  animation:pulse 1.5s ease-in-out infinite;
+  overflow:hidden;
+}
+
+/* Tối ưu hiển thị cho ảnh logo.png */
+.logo-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* Giữ nguyên tỉ lệ ảnh, không bị méo */
+  padding: 8px;        /* Tạo khoảng cách nhỏ để logo không chạm viền */
+}
+
 .name{font-size:22px;font-weight:800;color:#e8edf5;margin-bottom:8px}
 .name em{font-style:normal;color:#00e5ff}
 .sub{font-size:13px;color:#6b7a99}
 .dots{display:flex;gap:6px;justify-content:center;margin-top:24px}
 .dot{width:8px;height:8px;border-radius:50%;background:#252d3d;animation:bounce 1.2s ease-in-out infinite}
 .dot:nth-child(2){animation-delay:.15s}.dot:nth-child(3){animation-delay:.3s}
+
 @keyframes bounce{0%,80%,100%{transform:scale(1);background:#252d3d}40%{transform:scale(1.4);background:#00e5ff}}
 @keyframes pulse{0%,100%{box-shadow:0 0 0 0 rgba(0,229,255,.4)}50%{box-shadow:0 0 0 14px rgba(0,229,255,0)}}
 </style>
 </head>
 <body>
 <div class="splash">
-  <div class="logo">📚</div>
+  <div class="logo">
+    <img src="logo.png" alt="Logo LuyenThi369" class="logo-img">
+  </div>
   <div class="name">Luyen<em>Thi</em>360</div>
   <div class="sub">Đang tải...</div>
   <div class="dots"><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>
 </div>
+  
 <script>
 // Entry point: check if user is logged in
 setTimeout(function() {
-  const user = localStorage.getItem('lt360_user');
+  const user = localStorage.getItem('lt369_user');
   if (user) {
     window.location.href = 'pages/dashboard.html';
   } else {
