--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -251,7 +251,7 @@ body{background:var(--bg);color:var(--text);font-family:'Be Vietnam Pro',sans-se
 <aside class="sidebar">
   <button class="sidebar-close" onclick="closeSidebar()">‹</button>
   <a class="logo" href="dashboard.html">
-    <div class="logo-icon">📚</div>
+    <div class="logo-icon"><img src="logo.png" style="width:28px;height:28px;object-fit:contain;"></div>
     <div class="logo-text">Luyen<em>Thi</em>369</div>
   </a>
   <nav class="nav">
