--- a/pages/dang-nhap.html
+++ b/pages/dang-nhap.html
@@ -97,7 +97,7 @@ canvas{position:fixed;inset:0;z-index:0;pointer-events:none}
 <canvas id="cv"></canvas>
 <div class="left">
   <a class="brand" href="#">
-    <div class="brand-icon">📚</div>
+    <div class="brand-icon"><img src="logo.png" style="width:44px;height:44px;object-fit:contain;"></div>
     <div class="brand-name">Luyen<em>Thi</em>369</div>
   </a>
   <div class="hero">
