--- a/pages/luyen-mon.html
+++ b/pages/luyen-mon.html
@@ -511,7 +511,7 @@ body{animation:pageLoad .4s cubic-bezier(.2,.8,.3,1)}
 <aside class="sidebar">
   <button class="sidebar-close" onclick="closeSidebar()">‹</button>
   <a class="logo" href="dashboard.html">
-    <div class="logo-icon">📚</div>
+    <div class="logo-icon"><img src="logo.png" style="width:28px;height:28px;object-fit:contain;"></div>
     <div class="logo-text">Luyen<em>Thi</em>369</div>
   </a>
   <nav class="nav">
